cmake_minimum_required(VERSION 3.17)
project(SegaMasterSystem)
set(platform "SegaMasterSystem" CACHE STRING "Platform selection")
set(CMAKE_CXX_STANDARD 17)
add_executable(SegaMasterSystem src/main.cpp src/SMS_RAM.cpp src/SMS_RAM.hpp src/SMS_Mapper.cpp src/SMS_Mapper.hpp src/SMS_ROM.cpp src/SMS_ROM.hpp src/SMS_Support.hpp src/SMS_Z80.cpp src/SMS_Z80.hpp src/GEN_TESTS.hpp)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${platform})